docs: updated project listing table on pages site.